<resources>
    <string name="app_name">material_project</string>
    <string name="hint_helper">Please enter your search term</string>
    <string name="hint_search">photo search</string>
    <string name="hint_rb1">photo search</string>
    <string name="hint_rb2">user search</string>
    <string name="btn_search">Search</string>
    <string name="page_title">photo search</string>
    <string name="menu_search">Search</string>
    <string name="menu_more">More</string>
    <string name="content_description_search">search photo</string>
    <string name="content_description_more">more menu</string>
    <string name="search_view_edittext_msg">Search terms can be up to 12 characters long.</string>
    <string name="search_save">Save search terms</string>
    <string name="search_delete">delete all</string>

</resources>