<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sc_view"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_unsplash"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"/>

        <RadioGroup
            android:id="@+id/rg_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_search1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_rb1"
                android:layout_marginEnd="20dp"
                android:checked="true"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_search2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_rb2"
                android:checked="false"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
            app:boxStrokeColor="@color/design_default_color_primary"
            app:helperText="@string/hint_helper"
            app:counterMaxLength="12"
            app:counterEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_insert_photo_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:maxLength="12"
                android:inputType="text"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <include
            layout="@layout/layout_button_search"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>



</ScrollView>